Change encoding pipeline for text to token IDs
- Separate normalization & pretokenization funcs for char-base
- Function holds encoding steps

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from __future__ import annotations\n",
+    "from typing import Callable\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -128,7 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_text = normalize_text(raw_text)"
+    "# TEST: Is your text normalized the way you expected?\n",
+    "# normalized_text = normalize_text(raw_text)\n",
+    "# print(normalized_text)"
    ]
   },
   {
@@ -155,7 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shakespeare_text = pretokenize_text(normalized_text)"
+    "# TEST: Is your (normalized) text pretokenized the way you expected?\n",
+    "# pretokenized_text = pretokenize_text(normalized_text)\n",
+    "# print(pretokenized_text)"
    ]
   },
   {
@@ -171,8 +176,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "character_mapping = TokenMapping(shakespeare_text)"
+    "# Combine normalization and pretokenization steps\n",
+    "def tokenize_text(text: str) -> list[str]:\n",
+    "    normalized_text: str = normalize_text(raw_text)\n",
+    "    pretokenized_text: list[str] = pretokenize_text(normalized_text)\n",
+    "    # Characters are already tokens so pretokenized text is already tokenized\n",
+    "    tokenized_text = pretokenized_text\n",
+    "    return tokenized_text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -180,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded = character_mapping.encode(shakespeare_text)"
+    "tokenized_text = tokenize_text(raw_text)"
    ]
   },
   {
@@ -196,12 +214,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Dataset"
+    "### Encode (Tokens → Integer IDs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to get enocding (IDs) of text\n",
+    "def encode_text(\n",
+    "    text: str,\n",
+    "    tokenize_func: Callable[[str], list[str]],\n",
+    ") -> tuple[list[int], TokenMapping]:\n",
+    "    tokenized_text: list[str] = tokenize_func(text)\n",
+    "    # Get object for translating tokens to IDs and back\n",
+    "    token_mapping = TokenMapping(tokenized_text)\n",
+    "    # Get your text encoded as list of IDs\n",
+    "    enocded_text: list[str] = token_mapping.encode(tokenized_text)\n",
+    "    return enocded_text, token_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded, character_mapping = encode_text(raw_text, tokenize_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,50 +354,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.2541460002192295\n",
-      "[00m 6.3s (0 0%) 1.9161]\n",
+      "Epoch 1/5, Loss: 2.272809115461648\n",
+      "[00m 6.3s (0 0%) 2.1010]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to befiritize,\n",
-      "in spave nere sendeves.\n",
+      "to be or not to be kanfiteinon we and irs olek i cood! wreiceld simy! homond boti! haruifling sy ap'l,\n",
+      "yhou prard digh\n",
+      "Epoch 2/5, Loss: 1.904132768902154\n",
+      "[00m 12.6s (1 20%) 1.8678]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be mairadius, the chand tohtia that ag'd the cone,\n",
+      "secials marcius, and sout arst hary, it arthion and\n",
+      "Epoch 3/5, Loss: 1.818787350136632\n",
+      "[00m 19.0s (2 40%) 1.7272]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be the,\n",
+      "the comand to reso done's for one o' hy you well known with itch, poo, i vereed.\n",
       "\n",
-      "it.\n",
-      "hers as ank for of ar' the cormin to fartmorgite\n",
-      "ale,!\n",
+      "coot the sho\n",
+      "Epoch 4/5, Loss: 1.7758593479284464\n",
+      "[00m 25.4s (3 60%) 1.5742]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be fram! you\n",
+      "he prear gack ange?\n",
       "\n",
-      "ceave\n",
-      "Epoch 2/5, Loss: 1.900958567381667\n",
-      "[00m 12.7s (1 20%) 1.7791]\n",
+      "mane yes feer?\n",
+      "'\n",
+      "all would shum, agrainefides thing one thanath marc\n",
+      "Epoch 5/5, Loss: 1.7490602515376032\n",
+      "[00m 31.8s (4 80%) 1.5552]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bettiect it you mole. deard a lije. belidicen anethe baming of seve gontsgen;\n",
-      "if i pporet le repiegks \n",
-      "Epoch 3/5, Loss: 1.8191880360198096\n",
-      "[00m 19.0s (2 40%) 1.8707]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bestatlook,\n",
-      "tho aufithel,\n",
-      "then leed, blten hear veild fresenif endich your not chaj marcius,\n",
-      "whin upan\n",
-      "Epoch 4/5, Loss: 1.7777214188926136\n",
-      "[00m 25.4s (3 60%) 1.7408]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to beaml peting!\n",
+      "to be or not to befcith\n",
+      "firgher stech rome for mus! we lat hame theist him.\n",
       "\n",
-      "valadl us.\n",
+      "may!\n",
       "\n",
-      "virgilies most very heiren, first maset roine i to to to our hiser, thous: \n",
-      "Epoch 5/5, Loss: 1.7507283979330581\n",
-      "[00m 31.8s (4 80%) 1.8123]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to bellow where you decoy lencurs shur not pone i srome of, the peores habe\n",
-      "the pick fwase your cormons.\n",
-      "\n"
+      "aland efarfersiant's ad! and, weme?\n"
      ]
     }
    ],
@@ -381,15 +432,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to be ascome of mother looks poblangh: i comcush is truith to blear\n",
-      "spefigh let the pevencaine hosegs tha\n"
+      "to be or not to bear hem? se'd beat what a:\n",
+      "at the vood.\n",
+      "\n",
+      "brun:\n",
+      "i for ary the birs, would to knowe; has you have fith \n"
      ]
     }
    ],
@@ -421,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,32 +484,16 @@
     "bert_model_name = 'bert-base-cased'\n",
     "bert_model_name_uncased = 'bert-base-uncased'\n",
     "\n",
-    "bert_uncased_tokenizer = AutoTokenizer.from_pretrained(\n",
+    "my_tokenizer = AutoTokenizer.from_pretrained(\n",
     "    bert_model_name_uncased,\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "shakespeare_text = (\n",
-    "    tokenize_text(\n",
-    "        tokenizer=bert_uncased_tokenizer,\n",
-    "        text=raw_text,\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "token_mapping = TokenMapping(shakespeare_text)"
+    "### Encode (Tokens → Integer IDs)"
    ]
   },
   {
@@ -464,7 +502,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded = token_mapping.encode(shakespeare_text)"
+    "# Get enocding (IDs) of text\n",
+    "def encode_text_from_tokenizer(\n",
+    "    text: str,\n",
+    "    tokenizer,\n",
+    ") -> tuple[list[int], TokenMapping]:\n",
+    "    # Using tokenizer, get text as list of tokens (strings)\n",
+    "    tokenized_text: list[str] = tokenize_text_from_tokenizer(\n",
+    "        tokenizer=tokenizer,\n",
+    "        text=text,\n",
+    "    )\n",
+    "    # Get object for translating tokens to IDs and back\n",
+    "    token_mapping = TokenMapping(tokenized_text)\n",
+    "    # Get your text encoded as list of IDs\n",
+    "    enocded_text: list[str] = token_mapping.encode(tokenized_text)\n",
+    "    return enocded_text, token_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoded, token_mapping = encode_text_from_tokenizer(\n",
+    "    text=raw_text,\n",
+    "    tokenizer=my_tokenizer,\n",
+    ")"
    ]
   },
   {
@@ -476,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +606,10 @@
     ") -> str:\n",
     "    # Set model into \"evaluation mode\" (deactivates things like Dropout layers)\n",
     "    model.eval()\n",
-    "    tokenized_text = tokenize_text(tokenizer=tokenizer, text=input_str)\n",
+    "    tokenized_text = tokenize_text_from_tokenizer(\n",
+    "        tokenizer=tokenizer,\n",
+    "        text=input_str,\n",
+    "    )\n",
     "    input_tensor = tokens_to_id_tensor(\n",
     "        tokens=tokenized_text,\n",
     "        token_id_mapping=token_mapping.token2id,\n",
@@ -580,33 +647,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.226631400068891\n",
-      "[00m 2.7s (0 0%) 5.7415]\n",
+      "Epoch 1/5, Loss: 6.206475119811195\n",
+      "[00m 2.7s (0 0%) 5.8849]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be all them this :eni. he ascent first i i hatred to aug yo sin ; heus the for iny and this : world, thy health\n",
-      "Epoch 2/5, Loss: 5.521150141156793\n",
-      "[00m 5.4s (1 20%) 5.2638]\n",
+      "To be or not to be , here believe bad quarry auf! my country nor base for,! strike would'had?, cometinothini rushes thena myxtli\n",
+      "Epoch 2/5, Loss: 5.448414956856238\n",
+      "[00m 5.5s (1 20%) 5.4670]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be following make further is he's, meneni i would his hire the midst of, nor, but if,usus them for declinesen,\n",
-      "Epoch 3/5, Loss: 4.981049624672772\n",
-      "[00m 8.2s (2 40%) 4.5309]\n",
+      "To be or not to be tis below with make can wine ladiesria, to say will, come, upon wine's nape? no i, you : not again convenient ;\n",
+      "Epoch 3/5, Loss: 4.9026114018294065\n",
+      "[00m 8.3s (2 40%) 5.1810]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be beat la : so, i drop in souledly as both the point hastyole you aates them,. be citizen, hector of whereby?\n",
-      "Epoch 4/5, Loss: 4.55870046290748\n",
-      "[00m 11.1s (3 60%) 4.3171]\n",
+      "To be or not to be count.a and, advanced, and two upon i think wars fabric to co love in backs peace : the more, itcal thousandly almost free\n",
+      "Epoch 4/5, Loss: 4.49007889824192\n",
+      "[00m 11.1s (3 60%) 4.8475]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be tar shall of the wounds and clubs theire : if you. and driven to tell are at with om your necks! care the yarn fool naked\n",
-      "Epoch 5/5, Loss: 4.221116675077564\n",
-      "[00m 13.9s (4 80%) 4.4031]\n",
+      "To be or not to be go are bo in these easy dispatch sure can their battle in the outward, thus and't knowledge who bands all i must menenius, if\n",
+      "Epoch 5/5, Loss: 4.160077105473428\n",
+      "[00m 13.9s (4 80%) 4.0835]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##see coriolanus : it 'ble let, you'they doors addition and titus of himth!, is not with us lie, the\n"
+      "To be or not to be vent well, his friends, she, she, i alone, are sounds : l him but but weep, no - boilp ite friends\n"
      ]
     }
    ],
@@ -629,7 +696,7 @@
     "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {total_loss / len(train_loader)}')\n",
     "    print('[%s (%d %d%%) %.4f]' % (time_since(start), epoch, epoch / epochs * 100, loss))\n",
     "    print('-'*72)\n",
-    "    output = generate_text(bert_uncased_tokenizer, model, 'To be or not to be', 30)\n",
+    "    output = generate_text(my_tokenizer, model, 'To be or not to be', 30)\n",
     "    print(output)\n"
    ]
   },
@@ -642,19 +709,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be obey ; well of out'tis bent marcius : has yetsome believe your hideh achieved which ouraves in a lamb'd. men his\n"
+      "To be or not to be ##see you him slip aim! mygeny, to all whereinst why'er good general think. second citizen : soft thou a nature, we me\n"
      ]
     }
    ],
    "source": [
-    "output = generate_text(bert_uncased_tokenizer, model, 'To be or not to be', 30)\n",
+    "output = generate_text(my_tokenizer, model, 'To be or not to be', 30)\n",
     "print(output)"
    ]
   },
