Move encoding functions to helper.py

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "from __future__ import annotations\n",
-    "from typing import Callable\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -187,13 +186,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -223,25 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to get enocding (IDs) of text\n",
-    "def encode_text(\n",
-    "    text: str,\n",
-    "    tokenize_func: Callable[[str], list[str]],\n",
-    ") -> tuple[list[int], TokenMapping]:\n",
-    "    tokenized_text: list[str] = tokenize_func(text)\n",
-    "    # Get object for translating tokens to IDs and back\n",
-    "    token_mapping = TokenMapping(tokenized_text)\n",
-    "    # Get your text encoded as list of IDs\n",
-    "    enocded_text: list[str] = token_mapping.encode(tokenized_text)\n",
-    "    return enocded_text, token_mapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "encoded, character_mapping = encode_text(raw_text, tokenize_text)"
    ]
   },
@@ -254,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,48 +327,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.272809115461648\n",
-      "[00m 6.3s (0 0%) 2.1010]\n",
+      "Epoch 1/5, Loss: 2.2488512074985443\n",
+      "[00m 6.2s (0 0%) 1.9188]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be kanfiteinon we and irs olek i cood! wreiceld simy! homond boti! haruifling sy ap'l,\n",
-      "yhou prard digh\n",
-      "Epoch 2/5, Loss: 1.904132768902154\n",
-      "[00m 12.6s (1 20%) 1.8678]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be mairadius, the chand tohtia that ag'd the cone,\n",
-      "secials marcius, and sout arst hary, it arthion and\n",
-      "Epoch 3/5, Loss: 1.818787350136632\n",
-      "[00m 19.0s (2 40%) 1.7272]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to be the,\n",
-      "the comand to reso done's for one o' hy you well known with itch, poo, i vereed.\n",
+      "to be or not to bees' your too.\n",
       "\n",
-      "coot the sho\n",
-      "Epoch 4/5, Loss: 1.7758593479284464\n",
-      "[00m 25.4s (3 60%) 1.5742]\n",
+      "bfich mean or makich peall arniendmius:\n",
+      "the ase the strour at pear sire\n",
+      "a of are dold\n",
+      "Epoch 2/5, Loss: 1.8962107198306928\n",
+      "[00m 12.5s (1 20%) 1.9033]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be fram! you\n",
-      "he prear gack ange?\n",
+      "to be or not to beard pelftel's these the: not you, wome.\n",
       "\n",
-      "mane yes feer?\n",
-      "'\n",
-      "all would shum, agrainefides thing one thanath marc\n",
-      "Epoch 5/5, Loss: 1.7490602515376032\n",
-      "[00m 31.8s (4 80%) 1.5552]\n",
+      "frathe the rivec.\n",
+      "\n",
+      "qheg frosllowly, whad neer you fougf tin\n",
+      "Epoch 3/5, Loss: 1.8158875518713515\n",
+      "[00m 18.8s (2 40%) 1.6527]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to befcith\n",
-      "firgher stech rome for mus! we lat hame theist him.\n",
+      "to be or not to be shouds of as witen:\n",
+      "what ne'd\n",
+      "plave cond\n",
+      "to fow hath to out at they not jews to evous the sth and o\n",
+      "Epoch 4/5, Loss: 1.7752618567250407\n",
+      "[00m 25.1s (3 60%) 1.6465]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be sell vi i k catyh all aus that?\n",
       "\n",
-      "may!\n",
+      "first the sely coon btide be inden the cout olden:\n",
+      "fiem partioum r\n",
+      "Epoch 5/5, Loss: 1.7489230300671756\n",
+      "[00m 31.5s (4 80%) 1.5907]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to be heard; let fortlecking.\n",
       "\n",
-      "aland efarfersiant's ad! and, weme?\n"
+      "brutus:\n",
+      "she it see,\n",
+      "hen when jre!\n",
+      "\n",
+      "movens; first you tee force the of thou\n"
      ]
     }
    ],
@@ -432,18 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to bear hem? se'd beat what a:\n",
-      "at the vood.\n",
+      "to be or not to beith.\n",
       "\n",
-      "brun:\n",
-      "i for ary the birs, would to knowe; has you have fith \n"
+      "detide the clarth:\n",
+      "bork miech grrtne, back.\n",
+      "\n",
+      "menenius:\n",
+      "aufice you.\n",
+      "\n",
+      "comes, repests first not h\n"
      ]
     }
    ],
@@ -475,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,30 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get enocding (IDs) of text\n",
-    "def encode_text_from_tokenizer(\n",
-    "    text: str,\n",
-    "    tokenizer,\n",
-    ") -> tuple[list[int], TokenMapping]:\n",
-    "    # Using tokenizer, get text as list of tokens (strings)\n",
-    "    tokenized_text: list[str] = tokenize_text_from_tokenizer(\n",
-    "        tokenizer=tokenizer,\n",
-    "        text=text,\n",
-    "    )\n",
-    "    # Get object for translating tokens to IDs and back\n",
-    "    token_mapping = TokenMapping(tokenized_text)\n",
-    "    # Get your text encoded as list of IDs\n",
-    "    enocded_text: list[str] = token_mapping.encode(tokenized_text)\n",
-    "    return enocded_text, token_mapping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,33 +606,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.206475119811195\n",
-      "[00m 2.7s (0 0%) 5.8849]\n",
+      "Epoch 1/5, Loss: 6.218242396983497\n",
+      "[00m 2.7s (0 0%) 5.9829]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be , here believe bad quarry auf! my country nor base for,! strike would'had?, cometinothini rushes thena myxtli\n",
-      "Epoch 2/5, Loss: 5.448414956856238\n",
-      "[00m 5.5s (1 20%) 5.4670]\n",
+      "To be or not to be spectacle to.h '.,,, your : not ci we be shouts whole my thyer kisses.us and - seem or they : of\n",
+      "Epoch 2/5, Loss: 5.566582839854442\n",
+      "[00m 5.4s (1 20%) 5.3855]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be tis below with make can wine ladiesria, to say will, come, upon wine's nape? no i, you : not again convenient ;\n",
-      "Epoch 3/5, Loss: 4.9026114018294065\n",
-      "[00m 8.3s (2 40%) 5.1810]\n",
+      "To be or not to be ##um trncy mali man the alias, ;'s shouldus :h your receive and with, let what help the what of carries ll the painting\n",
+      "Epoch 3/5, Loss: 5.034900190766421\n",
+      "[00m 8.1s (2 40%) 4.6247]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be count.a and, advanced, and two upon i think wars fabric to co love in backs peace : the more, itcal thousandly almost free\n",
-      "Epoch 4/5, Loss: 4.49007889824192\n",
-      "[00m 11.1s (3 60%) 4.8475]\n",
+      "To be or not to be tired thoughts to take him withus lead met relievedidius :ces? not our then your fai din volum : off hes for myrti\n",
+      "Epoch 4/5, Loss: 4.6204903119962\n",
+      "[00m 10.9s (3 60%) 4.2314]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be go are bo in these easy dispatch sure can their battle in the outward, thus and't knowledge who bands all i must menenius, if\n",
-      "Epoch 5/5, Loss: 4.160077105473428\n",
-      "[00m 13.9s (4 80%) 4.0835]\n",
+      "To be or not to be speak : he serve it entire to depends, the business thousandub and the conducted that know not but as you sanctuary is you could both : then not\n",
+      "Epoch 5/5, Loss: 4.299651629733344\n",
+      "[00m 13.6s (4 80%) 4.1416]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be vent well, his friends, she, she, i alone, are sounds : l him but but weep, no - boilp ite friends\n"
+      "To be or not to be ##th before, holding told be content o it of fallwe ir how'tis, the wars is, corio the noble citizen : we are the\n"
      ]
     }
    ],
@@ -709,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be ##see you him slip aim! mygeny, to all whereinst why'er good general think. second citizen : soft thou a nature, we me\n"
+      "To be or not to be orangeec well in off true many would wish virgiliaia : come not so! second citizen : come, that'd the parties to good?\n"
      ]
     }
    ],
