fix: Typo in tokenize_text()
- Tokenize only text given
- Reformat character-based text generation function to match token-based equivalent

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -146,7 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pretokenize_text(text: str) -> list[str]:\n",
+    "def pretokenize_text(text: str) -> str | list[str]:\n",
+    "    # Effectively the same as a string\n",
     "    smaller_pieces = [char for char in text]\n",
     "    return smaller_pieces"
    ]
@@ -176,9 +177,9 @@
    "outputs": [],
    "source": [
     "# Combine normalization and pretokenization steps\n",
-    "def tokenize_text(text: str) -> list[str]:\n",
-    "    normalized_text: str = normalize_text(raw_text)\n",
-    "    pretokenized_text: list[str] = pretokenize_text(normalized_text)\n",
+    "def tokenize_text(text: str) -> str | list[str]:\n",
+    "    normalized_text: str = normalize_text(text)\n",
+    "    pretokenized_text: str | list[str] = pretokenize_text(normalized_text)\n",
     "    # Characters are already tokens so pretokenized text is already tokenized\n",
     "    tokenized_text = pretokenized_text\n",
     "    return tokenized_text"
@@ -292,12 +293,13 @@
     ") -> str:\n",
     "    # Set model into \"evaluation mode\" (deactivates things like Dropout layers)\n",
     "    model.eval()\n",
-    "    generated_text = input_str.lower()\n",
+    "    tokenized_text: list[str] = tokenize_text(input_str)\n",
     "    input_tensor = tokens_to_id_tensor(\n",
-    "        tokens=input_str.lower(),\n",
+    "        tokens=tokenized_text,\n",
     "        token_id_mapping=character_mapping.token2id,\n",
     "    )\n",
     "    \n",
+    "    generated_tokens = []\n",
     "    with torch.no_grad():\n",
     "        for _ in range(num_chars):\n",
     "            output = model(input_tensor.to(device))\n",
@@ -306,7 +308,7 @@
     "                dim=0,\n",
     "            )\n",
     "            next_char_idx = torch.multinomial(probabilities, 1).item()\n",
-    "            generated_text += character_mapping.id2token(next_char_idx)\n",
+    "            generated_tokens.append(character_mapping.id2token(next_char_idx))\n",
     "            input_tensor = torch.cat(\n",
     "                [\n",
     "                    input_tensor,\n",
@@ -314,8 +316,9 @@
     "                ],\n",
     "                1,\n",
     "            )\n",
-    "            \n",
-    "    return generated_text"
+    "    # Input string (decoded from tokenization) and generated string\n",
+    "    full_text = ''.join(tokenized_text+ generated_tokens)\n",
+    "    return full_text"
    ]
   },
   {
@@ -334,46 +337,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.2488512074985443\n",
-      "[00m 6.2s (0 0%) 1.9188]\n",
+      "Epoch 1/5, Loss: 2.2919828321225344\n",
+      "[00m 6.2s (0 0%) 1.8714]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bees' your too.\n",
+      "to be or not to betumen:\n",
+      "marcisuchrinur the in the thinding then igare.\n",
       "\n",
-      "bfich mean or makich peall arniendmius:\n",
-      "the ase the strour at pear sire\n",
-      "a of are dold\n",
-      "Epoch 2/5, Loss: 1.8962107198306928\n",
-      "[00m 12.5s (1 20%) 1.9033]\n",
+      "trath, eont lade fity\n",
+      "e\n",
+      "tinius felint;\n",
+      "on.\n",
+      "po\n",
+      "Epoch 2/5, Loss: 1.9326998647409506\n",
+      "[00m 12.4s (1 20%) 1.9571]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beard pelftel's these the: not you, wome.\n",
+      "to be or not to beil his now shut bllers\n",
+      "the be\n",
+      "rocers thaint.\n",
       "\n",
-      "frathe the rivec.\n",
-      "\n",
-      "qheg frosllowly, whad neer you fougf tin\n",
-      "Epoch 3/5, Loss: 1.8158875518713515\n",
-      "[00m 18.8s (2 40%) 1.6527]\n",
+      "vavest amse'd, tores cam: a firing in agate hand re au\n",
+      "Epoch 3/5, Loss: 1.8500160524258598\n",
+      "[00m 18.7s (2 40%) 1.9853]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be shouds of as witen:\n",
-      "what ne'd\n",
-      "plave cond\n",
-      "to fow hath to out at they not jews to evous the sth and o\n",
-      "Epoch 4/5, Loss: 1.7752618567250407\n",
-      "[00m 25.1s (3 60%) 1.6465]\n",
+      "to be or not to bead,\n",
+      "and heand in war.\n",
+      "'pear: frus. i deech.\n",
+      "\n",
+      "vall you shoums op your ofars\n",
+      "erone this his greawndold\n",
+      "Epoch 4/5, Loss: 1.8065914523487274\n",
+      "[00m 25.0s (3 60%) 2.0761]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be sell vi i k catyh all aus that?\n",
+      "to be or not to beirs, hather as's conirite?\n",
       "\n",
-      "first the sely coon btide be inden the cout olden:\n",
-      "fiem partioum r\n",
-      "Epoch 5/5, Loss: 1.7489230300671756\n",
-      "[00m 31.5s (4 80%) 1.5907]\n",
+      "volureliess your evike would vile haccess, as spoarves:\n",
+      "my parts have be\n",
+      "Epoch 5/5, Loss: 1.778434970356024\n",
+      "[00m 31.4s (4 80%) 2.1123]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be heard; let fortlecking.\n",
+      "to be or not to be your ch,\n",
+      "he i shad\n",
+      "preshan in accuhing.\n",
       "\n",
-      "brutus:\n",
-      "she it see,\n",
-      "hen when jre!\n",
-      "\n",
-      "movens; first you tee force the of thou\n"
+      "fir,\n",
+      "alrand\n",
+      "the batiol:\n",
+      "the have i'lst me noth linenh nay,\n"
      ]
     }
    ],
@@ -417,15 +426,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to beith.\n",
-      "\n",
-      "detide the clarth:\n",
-      "bork miech grrtne, back.\n",
-      "\n",
-      "menenius:\n",
-      "aufice you.\n",
-      "\n",
-      "comes, repests first not h\n"
+      "to be or not to bejad your fidemare,\n",
+      "we have thinius,\n",
+      "seeders. he tore i power\n",
+      "theil she tore cominius:\n",
+      "all thees. hon\n"
      ]
     }
    ],
@@ -613,26 +618,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.218242396983497\n",
-      "[00m 2.7s (0 0%) 5.9829]\n",
+      "Epoch 1/5, Loss: 6.212735981256713\n",
+      "[00m 2.7s (0 0%) 5.6615]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be spectacle to.h '.,,, your : not ci we be shouts whole my thyer kisses.us and - seem or they : of\n",
-      "Epoch 2/5, Loss: 5.566582839854442\n",
-      "[00m 5.4s (1 20%) 5.3855]\n",
+      "To be or not to be sic corn by better byrskin : success and sensiblerk mean, i o : let behind an cup lord people cry with comeessment o to\n",
+      "Epoch 2/5, Loss: 5.425861670733078\n",
+      "[00m 5.5s (1 20%) 5.0083]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##um trncy mali man the alias, ;'s shouldus :h your receive and with, let what help the what of carries ll the painting\n",
-      "Epoch 3/5, Loss: 5.034900190766421\n",
-      "[00m 8.1s (2 40%) 4.6247]\n",
+      "To be or not to be in interior men, with were him better corn a malice ore in. marcius : to faus i have lies meneni you not famously, o\n",
+      "Epoch 3/5, Loss: 4.860306764171071\n",
+      "[00m 8.3s (2 40%) 5.1678]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be tired thoughts to take him withus lead met relievedidius :ces? not our then your fai din volum : off hes for myrti\n",
-      "Epoch 4/5, Loss: 4.6204903119962\n",
-      "[00m 10.9s (3 60%) 4.2314]\n",
+      "To be or not to be maids with us and ioth than it th fair of idle geese, and their are of capitol shall softon rash charges and else what must oreni\n",
+      "Epoch 4/5, Loss: 4.4436827755902515\n",
+      "[00m 11.1s (3 60%) 4.7057]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be speak : he serve it entire to depends, the business thousandub and the conducted that know not but as you sanctuary is you could both : then not\n",
-      "Epoch 5/5, Loss: 4.299651629733344\n",
-      "[00m 13.6s (4 80%) 4.1416]\n",
+      "To be or not to be ##oth. br thankob first citizen :e : my nosely wore it your doing theirks al, his sacrifice, and upon my sacrifice, you\n",
+      "Epoch 5/5, Loss: 4.121911794889872\n",
+      "[00m 13.9s (4 80%) 3.8154]\n",
       "------------------------------------------------------------------------\n",
-      "To be or not to be ##th before, holding told be content o it of fallwe ir how'tis, the wars is, corio the noble citizen : we are the\n"
+      "To be or not to be ##qui map soldier : thou all it, sir, age of himself as to, by the people, with only ;, that merit the friend,\n"
      ]
     }
    ],
@@ -675,7 +680,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To be or not to be orangeec well in off true many would wish virgiliaia : come not so! second citizen : come, that'd the parties to good?\n"
+      "To be or not to be our wholeinius : especially. first citizen : toiculate have task? marcius : be go cai sons!, neither cannot : he'd\n"
      ]
     }
    ],
